ignore .idea dir

--- a/.gitignore
+++ b/.gitignore
@@ -575,3 +575,4 @@ TSWLatexianTemp*
 # https://plugins.jetbrains.com/plugin/8053-azure-toolkit-for-intellij
 
 # End of https://www.toptal.com/developers/gitignore/api/latex,pycharm,intellij,jetbrains
+.idea/
